<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:orientation="vertical" >

    <include layout="@layout/include_title" >
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/icon_add_icon_address"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/txt_add_icon_address"
                    android:src="@drawable/icon" />

                <EditText
                    android:id="@+id/edt_add_name_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_number_address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_add_number_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_address_address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_add_address_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_email_address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_add_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_qq_address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_add_qq_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_note_address"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_add_note_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_add_save_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_alarm_normal"
            android:text="@string/btn_add_save_address" />

        <Button
            android:id="@+id/btn_add_delete_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_alarm_normal"
            android:text="@string/btn_add_delete_address"
             />

        <Button
            android:id="@+id/btn_add_back_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_alarm_normal"
            android:text="@string/btn_add_back_address" />
    </LinearLayout>

</LinearLayout>