<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/icon_app_hardware"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/txt_icon_software"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_appname_hardware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_appname_hardware" />

        <TextView
            android:id="@+id/txt_details_hardware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_details_hardware" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chb_check_hardware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:focusable="false"
        android:clickable="false"/>

</LinearLayout>