<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_title" />

    <DigitalClock
        android:id="@+id/dgc_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/txt_alarm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/gray" />

    <AnalogClock
        android:id="@+id/alc_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <ToggleButton
            android:id="@+id/tgl_switch_alarm"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_alarm_normal"
            android:textOff="@string/btn_alarm_on"
            android:textOn="@string/btn_alarm_off" />

        <Button
            android:id="@+id/btn_alarm_settime"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_alarm_normal"
            android:text="@string/btn_alarm_settime" />
    </LinearLayout>

</LinearLayout>